--- a/frontend/supply.html
+++ b/frontend/supply.html
@@ -793,14 +793,14 @@ li {
                                     <label class="col-md-2 col-sm-3 col-xs-12 control-label">Product Type</label>
                                     <div class="col-md-10 col-sm-9 col-xs-12">
                                         <select id="product_types" name="product_types" class="drop-down">
-                                            <option value="meat">Meat</option>
-                                            <option value="chick">Chicken</option>
-                                            <option value="fish">Fish</option>
-                                            <option value="dairy">Dairy Product</option>
-                                            <option value="leg&grain">Legumes/Grains</option>
-                                            <option value="nut">Nuts</option>
-                                            <option value="f&V">Fruit/Vegetable</option>
-                                            <option value="oil&vineg">Oil/Vinegar</option>
+                                            <option value="Meat">Meat</option>
+                                            <option value="ChickenMeat">Chicken</option>
+                                            <option value="Fishmeat">Fish</option>
+                                            <option value="Dairy">Dairy Product</option>
+                                            <option value="Legumes&grains">Legumes/Grains</option>
+                                            <option value="Nuts">Nuts</option>
+                                            <option value="Fruits&Vegetables">Fruit/Vegetable</option>
+                                            <option value="Oil&Vinegars">Oil/Vinegar</option>
                                         </select>
                                     </div>
                                 </div>
