--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -90,14 +90,14 @@
 
 <div id="buttons">
 	<button class="button-value" onclick="filterProduct('all')">All</button>
-	<button class="button-value" onclick="filterProduct('Meat')">Meat</button>
-	<button class="button-value" onclick="filterProduct('ChickenMeat')">ChickenMeat</button>
-	<button class="button-value" onclick="filterProduct('Fishmeat')">Fishmeat</button>
-	<button class="button-value" onclick="filterProduct('Oil&Vinegars')">Oil&Vinegars</button>
-	<button class="button-value" onclick="filterProduct('Legumes&grains')">Legumes&grains</button>
-	<button class="button-value" onclick="filterProduct('Dairy')">Dairy</button>
-	<button class="button-value" onclick="filterProduct('Nuts')">Nuts</button>
-	<button class="button-value" onclick="filterProduct('Fruits&Vegetables')">Fruits&Vegetables</button>
+	<button class="button-value" onclick="filterProduct('meat')">Meat</button>
+	<button class="button-value" onclick="filterProduct('chick')">ChickenMeat</button>
+	<button class="button-value" onclick="filterProduct('fish')">Fishmeat</button>
+	<button class="button-value" onclick="filterProduct('oil&Vineg')">Oil&Vinegars</button>
+	<button class="button-value" onclick="filterProduct('Leg&grain')">Legumes&grains</button>
+	<button class="button-value" onclick="filterProduct('dairy')">Dairy</button>
+	<button class="button-value" onclick="filterProduct('nut')">Nuts</button>
+	<button class="button-value" onclick="filterProduct('f&V')">Fruits&Vegetables</button>
 </div>
 		<div id="products"></div>
 
