--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -94,7 +94,7 @@
 	<button class="button-value" onclick="filterProduct('chick')">ChickenMeat</button>
 	<button class="button-value" onclick="filterProduct('fish')">Fishmeat</button>
 	<button class="button-value" onclick="filterProduct('oil&Vineg')">Oil&Vinegars</button>
-	<button class="button-value" onclick="filterProduct('Leg&grain')">Legumes&grains</button>
+	<button class="button-value" onclick="filterProduct('leg&grain')">Legumes&grains</button>
 	<button class="button-value" onclick="filterProduct('dairy')">Dairy</button>
 	<button class="button-value" onclick="filterProduct('nut')">Nuts</button>
 	<button class="button-value" onclick="filterProduct('f&V')">Fruits&Vegetables</button>
