--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -91,13 +91,13 @@
 <div id="buttons">
 	<button class="button-value" onclick="filterProduct('all')">All</button>
 	<button class="button-value" onclick="filterProduct('meat')">Meat</button>
-	<button class="button-value" onclick="filterProduct('chick')">ChickenMeat</button>
-	<button class="button-value" onclick="filterProduct('fish')">Fishmeat</button>
-	<button class="button-value" onclick="filterProduct('oil&Vineg')">Oil&Vinegars</button>
-	<button class="button-value" onclick="filterProduct('leg&grain')">Legumes&grains</button>
+	<button class="button-value" onclick="filterProduct('chick')">Chick</button>
+	<button class="button-value" onclick="filterProduct('fish')">Fish</button>
+	<button class="button-value" onclick="filterProduct('oil&Vineg')">Oil&Vineg</button>
+	<button class="button-value" onclick="filterProduct('leg&grain')">Leg&grain</button>
 	<button class="button-value" onclick="filterProduct('dairy')">Dairy</button>
-	<button class="button-value" onclick="filterProduct('nut')">Nuts</button>
-	<button class="button-value" onclick="filterProduct('f&V')">Fruits&Vegetables</button>
+	<button class="button-value" onclick="filterProduct('nut')">Nut</button>
+	<button class="button-value" onclick="filterProduct('f&V')">f&V</button>
 </div>
 		<div id="products"></div>
 
