--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -282,12 +282,9 @@
 		                  </thead>
 		                  <tbody>
 		                    <tr>
-		                      <td>Top Up T-Shirt <strong class="mx-2">x</strong> 1</td>
-		                      <td>$250.00</td>
-		                    </tr>
-		                    <tr>
-		                      <td>Polo Shirt <strong class="mx-2">x</strong>   1</td>
-		                      <td>$100.00</td>
+		                     <td>
+					
+							 </td>
 		                    </tr>
 		                    <tr>
 		                      <td class="text-black font-weight-bold"><strong>Cart Subtotal</strong></td>
@@ -452,6 +449,7 @@
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/tiny-slider.js"></script>
 <script src="js/custom.js"></script>
+<script src="js/CheckoutApi.js"></script>
 </body>
 
 </html>
