--- a/frontend/about.html
+++ b/frontend/about.html
@@ -45,7 +45,7 @@
 						<li><a class="nav-link active" href="about.html" >About us</a></li>
 						<li><a class="nav-link" href="services.html">Services</a></li>
 						<li><a class="nav-link" href="blog.html">Blog</a></li>
-						<li><a class="nav-link" href="contact.html">Supply</a></li>
+						<li><a class="nav-link" onclick="navigateProfile()">Profile</a></li>
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
@@ -422,6 +422,7 @@
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/tiny-slider.js"></script>
 <script src="js/custom.js"></script>
+<script src="js/Navbar.js"></script>
 </body>
 
 </html>
