--- a/frontend/blog.html
+++ b/frontend/blog.html
@@ -46,11 +46,11 @@
 						<li><a class="nav-link" href="about.html">About us</a></li>
 						<li><a class="nav-link" href="services.html">Services</a></li>
 						<li><a class="nav-link active" href="blog.html">Blog</a></li>
-						<li><a class="nav-link" href="supply.html">Supply</a></li>
+						<li><a class="nav-link" onclick="navigateProfile()">Profile</a></li>
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-						<li><a class="nav-link" href="#"><img src="images/user.svg"></a></li>
+						<li><a class="nav-link" onclick="logout()"><img src="images/user.svg"></a></li>
 						<li><a class="nav-link" href="cart.html"><img src="images/cart.svg"></a></li>
 					</ul>
 				</div>
@@ -411,6 +411,8 @@
 <script src="js/bootstrap.bundle.min.js"></script>
 <script src="js/tiny-slider.js"></script>
 <script src="js/custom.js"></script>
+<script src="js/Navbar.js"></script>
+
 </body>
 
 </html>
