--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -40,11 +40,11 @@
 						<li><a class="nav-link" href="services.html">Services</a></li>
 						<li><a class="nav-link" href="blog.html">Blog</a></li>
 						
-						<li><a class="nav-link" href="supply.html">Supply</a></li>
+						<li><a class="nav-link" onclick="navigateProfile()">Profile</a></li>
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
-						<li><a class="nav-link" href="login.html"><img src="images/user.svg"></a></li>
+						<li><a class="nav-link" onclick="logout()"><img src="images/user.svg"></a></li>
 						<li><a class="nav-link cart" href="cart.html"><img src="images/cart.svg"><span class="cartspan">0</span></a></li>
 					</ul>
 				</div>
@@ -198,6 +198,8 @@
 <script src="js/custom.js"></script>
 <script src="js/shop.js"></script>
 <script src="js/cart.js"></script>
+<script src="js/Navbar.js"></script>
+
 </body>
 
 </html>
