--- a/frontend/index.html
+++ b/frontend/index.html
@@ -50,7 +50,7 @@
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
 						<!--loged in profile-->
-						<li><a class="nav-link" href="user_profile.html"><img src="images/user.svg"></a></li>
+						<li><a class="nav-link" href="login.html"><img src="images/user.svg"></a></li>
 						<li><a class="nav-link" href="cart.html"><img src="images/cart.svg"></a></li>
 					</ul>
 				</div>
