--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,12 +45,12 @@
 						<li><a class="nav-link" href="about.html">About us</a></li>
 						<li><a class="nav-link" href="services.html">Services</a></li>
 						<li><a class="nav-link" href="blog.html">Blog</a></li>
-						<li><a class="nav-link" href="supply.html">Supply</a></li>
+						<li><a class="nav-link" onclick="navigateProfile()">Profile</a></li>
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
 						<!--loged in profile-->
-						<li><a class="nav-link" href="login.html"><img src="images/user.svg"></a></li>
+						<li><a class="nav-link" onclick="logout()"><img src="images/user.svg"></a></li>
 						<li><a class="nav-link" href="cart.html"><img src="images/cart.svg"></a></li>
 					</ul>
 				</div>
@@ -543,6 +543,7 @@
 		<script src="js/tiny-slider.js"></script>
 		<script src="js/custom.js"></script>
 		<script src="js/Index.js"></script>
+		<script src="js/Navbar.js"></script>
 	</body>
 
 </html>
