--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -84,7 +84,7 @@
 		<div class="products1">
 
 		</div>
-		<button type="button" onclick="navigateCheckout()">Checkout</button>
+		<button type="button" class="btn" onclick="navigateCheckout()">Checkout</button>
 	</div>
 			
 
