--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -135,6 +135,16 @@
 								<input type="text" class="form-control" id="c_phone" name="c_phone"
 									placeholder="Phone Number">
 							</div>
+							<div class="col-md-6">
+								<label for="cardnum" class="text-black">Card Number <span class="text-danger">*</span></label>
+								<input type="text" class="form-control" id="cardnum" name="cardnum"
+									placeholder="Card Number">
+							</div>
+							<div class="col-md-6">
+								<label for="cvv" class="text-black">cvv<span class="text-danger">*</span></label>
+								<input type="text" class="form-control" id="cvv" name="cvv"
+									placeholder="cvv">
+							</div>
 						</div>
 
 						
