--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -48,7 +48,7 @@
 						<li><a class="nav-link" href="services.html">Services</a></li>
 						<li><a class="nav-link" href="blog.html">Blog</a></li>
 					
-						<li><a class="nav-link" onclick="navigateProfile()">Profile</a></li>
+						<li><a class="nav-link" style="cursor: pointer;" onclick="navigateProfile()">Profile</a></li>
 					</ul>
 
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
@@ -186,7 +186,6 @@
 							</div>
 						</div>
 					</div>
-
 				</div>
 
 				<div class="border-top copyright">
