--- a/frontend/about.html
+++ b/frontend/about.html
@@ -40,14 +40,12 @@
 
 			<div class="collapse navbar-collapse" id="navbarsFurni">
 				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-					<li class="nav-item active">
+					<li class="nav-item">
 						<a class="nav-link" href="index.html">Home</a>
 					</li>
 					<li><a class="nav-link" href="shop.html">Shop</a></li>
 					<li><a class="nav-link" href="about.html">About us</a></li>
 					<li><a class="nav-link" href="services.html">Services</a></li>
-					<li><a class="nav-link" href="blog.html">Blog</a></li>
-					<li><a class="nav-link" href="contact.html">Contact us</a></li>
 					<li><a class="nav-link" style="cursor: pointer;" onclick="navigateProfile()">Profile</a></li>
 				</ul>
 
@@ -67,7 +65,7 @@
 			<div class="row justify-content-between">
 				<div class="col-lg-5">
 					<div class="intro-excerpt">
-						<h1>About Us</h1>
+						<h1>Our Story</h1>
 						<p class="mb-4">Supplify was born from the vision of connecting the raw food supplier and the
 							restaurateur in a seamless, efficient, and
 							innovative way. The platform empowers suppliers to enter and sell their freshest products
@@ -86,7 +84,7 @@
 				</div>
 				<div class="col-lg-7">
 					<div class="hero-img-wrap">
-						<img src="images/chef.jpeg" class="img-fluid">
+						<img src="images/harvesting.jpg" style="width: 700px; height: 500px;" class="img-fluid">
 					</div>
 				</div>
 			</div>
@@ -139,71 +137,7 @@
 	</div>
 	<!-- End We Help Section -->
 	<!-- Start Why Choose Us Section -->
-	<div class="why-choose-section">
-		<div class="container">
-			<div class="row justify-content-between align-items-center">
-				<div class="col-lg-6">
-					<h2 class="section-title">Why Choose Us</h2>
-					<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam vulputate velit
-						imperdiet dolor tempor tristique.</p>
-
-					<div class="row my-5">
-						<div class="col-6 col-md-6">
-							<div class="feature">
-								<div class="icon">
-									<img src="images/truck.svg" alt="Image" class="imf-fluid">
-								</div>
-								<h3>Fast &amp; Free Shipping</h3>
-								<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-									vulputate.</p>
-							</div>
-						</div>
-
-						<div class="col-6 col-md-6">
-							<div class="feature">
-								<div class="icon">
-									<img src="images/bag.svg" alt="Image" class="imf-fluid">
-								</div>
-								<h3>Easy to Shop</h3>
-								<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-									vulputate.</p>
-							</div>
-						</div>
-
-						<div class="col-6 col-md-6">
-							<div class="feature">
-								<div class="icon">
-									<img src="images/support.svg" alt="Image" class="imf-fluid">
-								</div>
-								<h3>24/7 Support</h3>
-								<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-									vulputate.</p>
-							</div>
-						</div>
-
-						<div class="col-6 col-md-6">
-							<div class="feature">
-								<div class="icon">
-									<img src="images/return.svg" alt="Image" class="imf-fluid">
-								</div>
-								<h3>Hassle Free Returns</h3>
-								<p>Donec vitae odio quis nisl dapibus malesuada. Nullam ac aliquet velit. Aliquam
-									vulputate.</p>
-							</div>
-						</div>
-
-					</div>
-				</div>
-
-				<div class="col-lg-5">
-					<div class="img-wrap">
-						<img src="images/bluebird-provisions-lRAWcT7uwhY-unsplash.jpg" alt="Image" class="img-fluid">
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
+	
 	<!-- End Why Choose Us Section -->
 	<!-- Start Contact Form -->
 	<div class="untree_co-section">
