--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -40,14 +40,10 @@
 
 			<div class="collapse navbar-collapse" id="navbarsFurni">
 				<ul class="custom-navbar-nav navbar-nav ms-auto mb-2 mb-md-0">
-					<li class="nav-item active">
-						<a class="nav-link" href="index.html">Home</a>
-					</li>
+					<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 					<li><a class="nav-link" href="shop.html">Shop</a></li>
 					<li><a class="nav-link" href="about.html">About us</a></li>
 					<li><a class="nav-link" href="services.html">Services</a></li>
-					<li><a class="nav-link" href="blog.html">Blog</a></li>
-					<li><a class="nav-link" href="contact.html">Contact us</a></li>
 					<li><a class="nav-link" onclick="navigateProfile()">Profile</a></li>
 				</ul>
 
