--- a/frontend/services.html
+++ b/frontend/services.html
@@ -49,11 +49,10 @@
 						<li class="nav-item">
 							<a class="nav-link active" href="services.html">Services</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="blog.html">Blog</a>
-						</li>
+					
 						
-						<li><a class="nav-link" onclick="navigateProfile()">Profile</a></li>
+						<li><a class="nav-link" style="cursor: pointer;" onclick="navigateProfile()">Profile</a></li>
+
 					</ul>
 					<ul class="custom-navbar-cta navbar-nav mb-2 mb-md-0 ms-5">
 						<li><a class="nav-link" onclick="logout()"><img src="images/user.svg"></a></li>
