--- a/frontend/services.html
+++ b/frontend/services.html
@@ -72,8 +72,8 @@
 							<div class="intro-excerpt">
 								<h1>Consultancy Service</h1>
 								<p class="mb-4">Discover the magic of Supplify's expert consultancy services, where we breathe life into menus, crafted just for you! Whether you're looking to spice up your offerings or start from scratch, our team is here to bring your culinary dreams to reality. Let's create something extraordinary together!</p>
-								<p><a href="" class="btn btn-secondary me-2">Get Menu Consultation</a>
-									<a href="#" class="btn btn-white-outline" id="exploreButton">Explore</a></p>
+								<p><a href="services.html" class="btn btn-secondary me-2">Get Menu Consultation</a>
+									<a href="shop.html" class="btn btn-white-outline" id="exploreButton">Explore</a></p>
 							</div>
 						</div>
 						<div class="col-lg-7">
@@ -235,111 +235,84 @@
 		<!-- End Testimonial Slider -->
 
 		
+	<!--start footer-->
+	<footer class="footer-section">
+		<div class="container relative">
 
-		<!-- Start Footer Section -->
-		<footer class="footer-section">
-			<div class="container relative">
+			<div class="sofa-img">
+				<img src="images/wagyu.png" style="max-width: 300px;"alt="Image" class="img-fluid">
+			</div>
 
-				<div class="sofa-img">
-					<img src="images/wagyu.png" alt="Image" class="img-fluid">
+			
+
+			<div class="row g-5 mb-5">
+				<div class="col-lg-4">
+					<div class="mb-4 footer-logo-wrap"><a href="index.html" class="footer-logo">Supplify<span>.</span></a>
+					</div>
+					<p class="mb-4">We're committed to providing restaurants with the safest, freshest ingredients.
+					</p>
+
+					<ul class="list-unstyled custom-social">
+						<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
+						<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
+						<li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
+						<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
+					</ul>
 				</div>
 
-				<div class="row">
-					<div class="col-lg-8">
-						<div class="subscription-form">
-							<h3 class="d-flex align-items-center"><span class="me-1"><img src="images/envelope-outline.svg" alt="Image" class="img-fluid"></span><span>Subscribe to Newsletter</span></h3>
-
-							<form action="#" class="row g-3">
-								<div class="col-auto">
-									<input type="text" class="form-control" placeholder="Enter your name">
-								</div>
-								<div class="col-auto">
-									<input type="email" class="form-control" placeholder="Enter your email">
-								</div>
-								<div class="col-auto">
-									<button class="btn btn-primary">
-										<span class="fa fa-paper-plane"></span>
-									</button>
-								</div>
-							</form>
-
-						</div>
-					</div>
-				</div>
-
-				<div class="row g-5 mb-5">
-					<div class="col-lg-4">
-						<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Supplify<span>.</span></a></div>
-						<p class="mb-4">We're committed to providing restaurants with the safest, freshest ingredients.</p>
-
-						<ul class="list-unstyled custom-social">
-							<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
-							<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
-						</ul>
-					</div>
-
-					<div class="col-lg-8">
-						<div class="row links-wrap">
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">About us</a></li>
-									<li><a href="#">Services</a></li>
-									<li><a href="#">Blog</a></li>
-									<li><a href="#">Contact us</a></li>
-								</ul>
-							</div>
-
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">Support</a></li>
-									<li><a href="#">Knowledge base</a></li>
-									<li><a href="#">Live chat</a></li>
-								</ul>
-							</div>
-
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">Jobs</a></li>
-									<li><a href="#">Our team</a></li>
-									<li><a href="#">Leadership</a></li>
-									<li><a href="#">Privacy Policy</a></li>
-								</ul>
-							</div>
-
-							<div class="col-6 col-sm-6 col-md-3">
-								<ul class="list-unstyled">
-									<li><a href="#">Raw Meat</a></li>
-									<li><a href="#">Banana</a></li>
-									<li><a href="#">Whole Chicken</a></li>
-								</ul>
-							</div>
-						</div>
-					</div>
-
-				</div>
-
-				<div class="border-top copyright">
-					<div class="row pt-4">
-						<div class="col-lg-6">
-							<p class="mb-2 text-center text-lg-start">Copyright &copy;<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. </a>  <!-- License information: https://untree.co/license/ -->
-            </p>
+				<div class="col-lg-8">
+					<div class="row links-wrap">
+						<div class="col-6 col-sm-6 col-md-3">
+							<ul class="list-unstyled">
+								<li><a href="about.html">About us</a></li>
+								<li><a href="services.html">Services</a></li>
+								<li><a href="about.html">Contact us</a></li>
+							</ul>
 						</div>
 
-						<div class="col-lg-6 text-center text-lg-end">
-							<ul class="list-unstyled d-inline-flex ms-auto">
-								<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
+						<div class="col-6 col-sm-6 col-md-3">
+							<ul class="list-unstyled">
+								<li><a href="about.html">Support</a></li>
+								<li><a href="shop.html">Shop</a></li>
+
+							</ul>
+						</div>
+
+						<div class="col-6 col-sm-6 col-md-3">
+							<ul class="list-unstyled">
+								<li><a href="login.html">Jobs</a></li>
 								<li><a href="#">Privacy Policy</a></li>
 							</ul>
 						</div>
 
+					
 					</div>
 				</div>
 
 			</div>
-		</footer>
-		<!-- End Footer Section -->	
+
+			<div class="border-top copyright">
+				<div class="row pt-4">
+					<div class="col-lg-6">
+						<p class="mb-2 text-center text-lg-start">Copyright &copy;
+							<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. </a>
+							<!-- License information: https://untree.co/license/ -->
+						</p>
+					</div>
+
+					<div class="col-lg-6 text-center text-lg-end">
+						<ul class="list-unstyled d-inline-flex ms-auto">
+							<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
+							<li><a href="#">Privacy Policy</a></li>
+						</ul>
+					</div>
+
+				</div>
+			</div>
+
+		</div>
+	</footer>
+	<!-- End Footer Section -->
 
 
 		<script src="js/bootstrap.bundle.min.js"></script>
