--- a/frontend/about.html
+++ b/frontend/about.html
@@ -45,7 +45,9 @@
 					</li>
 					<li><a class="nav-link" href="shop.html">Shop</a></li>
 					<li><a class="nav-link active" href="about.html">About us</a></li>
-					<li><a class="nav-link" href="services.html">Services</a></li>
+					<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
+
+
 					<li><a class="nav-link" style="cursor: pointer;" onclick="navigateProfile()">Profile</a></li>
 				</ul>
 
@@ -231,7 +233,9 @@
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
 									<li><a href="about.html">About us</a></li>
-									<li><a href="services.html">Services</a></li>
+									<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
+
+
 									<li><a href="about.html">Contact us</a></li>
 								</ul>
 							</div>
