--- a/frontend/services.html
+++ b/frontend/services.html
@@ -265,7 +265,9 @@
 						<div class="col-6 col-sm-6 col-md-3">
 							<ul class="list-unstyled">
 								<li><a href="about.html">About us</a></li>
-								<li><a href="services.html">Services</a></li>
+								<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
+
+
 								<li><a href="about.html">Contact us</a></li>
 							</ul>
 						</div>
