--- a/frontend/supply.html
+++ b/frontend/supply.html
@@ -744,7 +744,9 @@ li {
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li><a class="nav-link" href="shop.html">Shop</a></li>
                     <li><a class="nav-link" href="about.html">About us</a></li>
-                    <li><a class="nav-link" href="services.html">Services</a></li>
+                    <li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
+
+
 
                     
                     
