--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -37,8 +37,10 @@
 						</li>
 						<li><a class="nav-link" href="shop.html">Shop</a></li>
 						<li><a class="nav-link" href="about.html">About us</a></li>
-						<li><a class="nav-link" href="services.html">Services</a></li>
-						<li><a class="nav-link" href="blog.html">Blog</a></li>
+						<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
+
+
+						
 						
 						<li><a class="nav-link" onclick="navigateProfile()">Profile</a></li>
 					</ul>
@@ -118,7 +120,9 @@
 						<div class="col-6 col-sm-6 col-md-3">
 							<ul class="list-unstyled">
 								<li><a href="about.html">About us</a></li>
-								<li><a href="services.html">Services</a></li>
+								<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
+
+
 								<li><a href="about.html">Contact us</a></li>
 							</ul>
 						</div>
