--- a/frontend/checkout.html
+++ b/frontend/checkout.html
@@ -43,7 +43,9 @@
 					<li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
 					<li><a class="nav-link" href="shop.html">Shop</a></li>
 					<li><a class="nav-link" href="about.html">About us</a></li>
-					<li><a class="nav-link" href="services.html">Services</a></li>
+					<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
+
+
 					<li><a class="nav-link" onclick="navigateProfile()">Profile</a></li>
 				</ul>
 
@@ -268,7 +270,9 @@
 							<div class="col-6 col-sm-6 col-md-3">
 								<ul class="list-unstyled">
 									<li><a href="about.html">About us</a></li>
-									<li><a href="services.html">Services</a></li>
+									<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
+
+
 									<li><a href="about.html">Contact us</a></li>
 								</ul>
 							</div>
