--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,6 +43,7 @@
 						</li>
 						<li><a class="nav-link" href="shop.html">Shop</a></li>
 						<li><a class="nav-link" href="about.html">About us</a></li>
+						<li><a class="nav-link" href="services.html">Services</a></li>
 						<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
 						
 
@@ -464,14 +465,10 @@
 						<div class="col-6 col-sm-6 col-md-3">
 							<ul class="list-unstyled">
 								<li><a href="about.html">About us</a></li>
-<<<<<<< HEAD
-								<li><a href="services.html">Services</a></li>
-=======
 								<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
 
 
 								
->>>>>>> f97a114faffb7ec3247b0a1723832b169fab4c3d
 								<li><a href="about.html">Contact us</a></li>
 							</ul>
 						</div>
