--- a/frontend/shop.html
+++ b/frontend/shop.html
@@ -47,6 +47,7 @@
 					</li>
 					<li class="nav-item active"><a class="nav-link" href="shop.html">Shop</a></li>
 					<li><a class="nav-link" href="about.html">About us</a></li>
+					<li><a class="nav-link" href="services.html">Services</a></li>
 					<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link">Supply</a>
 					</li>
 
@@ -121,39 +122,6 @@
 
 
 
-<<<<<<< HEAD
-
-<!--value buttons-->
-
-<div id="buttons">
-	<button class="button-value" onclick="filterProduct('all')">All</button>
-	<button class="button-value" onclick="filterProduct('meat')">Meat</button>
-	<button class="button-value" onclick="filterProduct('chick')">Chick</button>
-	<button class="button-value" onclick="filterProduct('fish')">Fish</button>
-	<button class="button-value" onclick="filterProduct('oil&Vineg')">Oil&Vineg</button>
-	<button class="button-value" onclick="filterProduct('leg&grain')">Leg&grain</button>
-	<button class="button-value" onclick="filterProduct('dairy')">Dairy</button>
-	<button class="button-value" onclick="filterProduct('nut')">Nut</button>
-	<button class="button-value" onclick="filterProduct('f&V')">f&V</button>
-</div>
-		<div id="products"></div>
-
-	
-
-					
-
-			<!--start footer-->
-	<footer class="footer-section">
-		<div class="container relative">
-
-			<div class="sofa-img">
-				<img src="images/wagyu.png" style="max-width: 300px;"alt="Image" class="img-fluid">
-			</div>
-
-			
-
-=======
->>>>>>> f97a114faffb7ec3247b0a1723832b169fab4c3d
 			<div class="row g-5 mb-5">
 				<div class="col-lg-4">
 					<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Supplify<span>.</span></a>
@@ -174,14 +142,10 @@
 						<div class="col-6 col-sm-6 col-md-3">
 							<ul class="list-unstyled">
 								<li><a href="about.html">About us</a></li>
-<<<<<<< HEAD
-								<li><a href="services.html">Services</a></li>
-=======
 								<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a
 										class="nav-link">Supply</a></li>
 
 
->>>>>>> f97a114faffb7ec3247b0a1723832b169fab4c3d
 								<li><a href="about.html">Contact us</a></li>
 							</ul>
 						</div>
@@ -201,41 +165,10 @@
 							</ul>
 						</div>
 
-<<<<<<< HEAD
-					
-=======
-
->>>>>>> f97a114faffb7ec3247b0a1723832b169fab4c3d
 					</div>
 				</div>
 
 			</div>
-<<<<<<< HEAD
-
-			<div class="border-top copyright">
-				<div class="row pt-4">
-					<div class="col-lg-6">
-						<p class="mb-2 text-center text-lg-start">Copyright &copy;
-							<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. </a>
-							<!-- License information: https://untree.co/license/ -->
-						</p>
-					</div>
-
-					<div class="col-lg-6 text-center text-lg-end">
-						<ul class="list-unstyled d-inline-flex ms-auto">
-							<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
-							<li><a href="#">Privacy Policy</a></li>
-						</ul>
-					</div>
-
-				</div>
-			</div>
-
-		</div>
-	</footer>
-	<!-- End Footer Section -->
-=======
->>>>>>> f97a114faffb7ec3247b0a1723832b169fab4c3d
 
 			<div class="border-top copyright">
 				<div class="row pt-4">
