--- a/frontend/cart.html
+++ b/frontend/cart.html
@@ -37,6 +37,7 @@
 						</li>
 						<li><a class="nav-link" href="shop.html">Shop</a></li>
 						<li><a class="nav-link" href="about.html">About us</a></li>
+						<li><a class="nav-link" href="services.html">Services</a></li>
 						<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
 
 
@@ -90,90 +91,85 @@
 	</div>
 			
 
-		<!--start footer-->
-	<footer class="footer-section">
-		<div class="container relative">
-
-			<div class="sofa-img">
-				<img src="images/wagyu.png" style="max-width: 300px;"alt="Image" class="img-fluid">
-			</div>
-
-			
-
-			<div class="row g-5 mb-5">
-				<div class="col-lg-4">
-					<div class="mb-4 footer-logo-wrap"><a href="index.html" class="footer-logo">Supplify<span>.</span></a>
+			<!--start footer-->
+			<footer class="footer-section">
+				<div class="container relative">
+		
+					<div class="sofa-img">
+						<img src="images/wagyu.png" style="max-width: 300px;"alt="Image" class="img-fluid">
 					</div>
-					<p class="mb-4">We're committed to providing restaurants with the safest, freshest ingredients.
-					</p>
-
-					<ul class="list-unstyled custom-social">
-						<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
-						<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
-						<li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
-						<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
-					</ul>
-				</div>
-
-				<div class="col-lg-8">
-					<div class="row links-wrap">
-						<div class="col-6 col-sm-6 col-md-3">
-							<ul class="list-unstyled">
-								<li><a href="about.html">About us</a></li>
-<<<<<<< HEAD
-								<li><a href="services.html">Services</a></li>
-=======
-								<li id="supply" style="cursor: pointer;" onclick="navigateSupply()"><a class="nav-link" >Supply</a></li>
-
-
->>>>>>> f97a114faffb7ec3247b0a1723832b169fab4c3d
-								<li><a href="about.html">Contact us</a></li>
-							</ul>
-						</div>
-
-						<div class="col-6 col-sm-6 col-md-3">
-							<ul class="list-unstyled">
-								<li><a href="about.html">Support</a></li>
-								<li><a href="shop.html">Shop</a></li>
-
-							</ul>
-						</div>
-
-						<div class="col-6 col-sm-6 col-md-3">
-							<ul class="list-unstyled">
-								<li><a href="login.html">Jobs</a></li>
-								<li><a href="#">Privacy Policy</a></li>
-							</ul>
-						</div>
-
+		
 					
+		
+					<div class="row g-5 mb-5">
+						<div class="col-lg-4">
+							<div class="mb-4 footer-logo-wrap"><a href="#" class="footer-logo">Supplify<span>.</span></a>
+							</div>
+							<p class="mb-4">We're committed to providing restaurants with the safest, freshest ingredients.
+							</p>
+		
+							<ul class="list-unstyled custom-social">
+								<li><a href="#"><span class="fa fa-brands fa-facebook-f"></span></a></li>
+								<li><a href="#"><span class="fa fa-brands fa-twitter"></span></a></li>
+								<li><a href="#"><span class="fa fa-brands fa-instagram"></span></a></li>
+								<li><a href="#"><span class="fa fa-brands fa-linkedin"></span></a></li>
+							</ul>
+						</div>
+		
+						<div class="col-lg-8">
+							<div class="row links-wrap">
+								<div class="col-6 col-sm-6 col-md-3">
+									<ul class="list-unstyled">
+										<li><a href="about.html">About us</a></li>
+										<li><a href="services.html">Services</a></li>
+										<li><a href="about.html">Contact us</a></li>
+									</ul>
+								</div>
+		
+								<div class="col-6 col-sm-6 col-md-3">
+									<ul class="list-unstyled">
+										<li><a href="about.html">Support</a></li>
+										<li><a href="shop.html">Shop</a></li>
+		
+									</ul>
+								</div>
+		
+								<div class="col-6 col-sm-6 col-md-3">
+									<ul class="list-unstyled">
+										<li><a href="login.html">Jobs</a></li>
+										<li><a href="#">Privacy Policy</a></li>
+									</ul>
+								</div>
+		
+							
+							</div>
+						</div>
+		
 					</div>
+		
+					<div class="border-top copyright">
+						<div class="row pt-4">
+							<div class="col-lg-6">
+								<p class="mb-2 text-center text-lg-start">Copyright &copy;
+									<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. </a>
+									<!-- License information: https://untree.co/license/ -->
+								</p>
+							</div>
+		
+							<div class="col-lg-6 text-center text-lg-end">
+								<ul class="list-unstyled d-inline-flex ms-auto">
+									<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
+									<li><a href="#">Privacy Policy</a></li>
+								</ul>
+							</div>
+		
+						</div>
+					</div>
+		
 				</div>
-
-			</div>
-
-			<div class="border-top copyright">
-				<div class="row pt-4">
-					<div class="col-lg-6">
-						<p class="mb-2 text-center text-lg-start">Copyright &copy;
-							<script>document.write(new Date().getFullYear());</script>. All Rights Reserved. </a>
-							<!-- License information: https://untree.co/license/ -->
-						</p>
-					</div>
-
-					<div class="col-lg-6 text-center text-lg-end">
-						<ul class="list-unstyled d-inline-flex ms-auto">
-							<li class="me-4"><a href="#">Terms &amp; Conditions</a></li>
-							<li><a href="#">Privacy Policy</a></li>
-						</ul>
-					</div>
-
-				</div>
-			</div>
-
-		</div>
-	</footer>
-	<!-- End Footer Section -->
+			</footer>
+			<!-- End Footer Section -->
+		
 
 
 <script src="js/bootstrap.bundle.min.js"></script>
